Fixed an error with my grid being too large

--- a/app/assets/stylesheets/api/feature.scss
+++ b/app/assets/stylesheets/api/feature.scss
@@ -12,7 +12,7 @@
 .all-albums {
   background: transparent;
   display: grid;
-  width: 100%;
+  width: 90%;
   height: 100%;
   padding: 0 63px;
 
